fix: Icon button alignment, split colors

--- a/src/aics-image-viewer/components/Toolbar/styles.css
+++ b/src/aics-image-viewer/components/Toolbar/styles.css
@@ -112,7 +112,7 @@
   /* Icon-only buttons */
 
   & .ant-btn-icon-only {
-    padding-bottom: 1px;
+    padding-bottom: 4px;
   }
 
   & .btn-borderless {
